<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientHomeScreenActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcoming_appts_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CDC5C5"
        android:layout_above="@id/goToAppointmentBtn"
        android:layout_below="@id/UpcomingAppointmentTitle"/>

    <TextView
        android:id="@+id/UpcomingAppointmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upcoming_Appointments"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>


    <Button
        android:id="@+id/goToAppointmentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/schedule_appointment" />


</RelativeLayout>