...
    <string name="Past_Appointments">Past Appointments</string>
    <string name="Upcoming_Appointments">Upcoming Appointments</string>
    <string name="Payment">Payment</string>
    <string name="Pay_now">Pay Now</string>
    <string name="description">Search</string>
    <string name="Home">Home</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="view_cancellations">View Cancellations</string>
    <string name="choose_a_date">Choose a Date</string>
    <string name="textview">TextView</string>
    <string name="your_name">your name</string>
    <string name="address_of_service_location">Address of service location</string>
    <string name="contractor_name">Contractor name</string>
...
